FIX: remove z-index of .firtsScreen::after

--- a/components/CardPost/CardPost.module.sass
+++ b/components/CardPost/CardPost.module.sass
@@ -59,7 +59,7 @@
 
     &_tagsList
         display: flex
-        margin: 2rem
+        margin: 2rem 0
     &_tagsItem
         border-radius: 10rem
         border-width: 0.2rem
