--- a/pages/index.module.sass
+++ b/pages/index.module.sass
@@ -15,7 +15,6 @@
         background: $background
         opacity: 0.7
         position: absolute
-        z-index: 0
 
     &_logo
         z-index: 1
